--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,4 @@
 {
-	// Use IntelliSense to learn about possible attributes.
-	// Hover to view descriptions of existing attributes.
-	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
 	"version": "0.2.0",
 	"configurations": [
 		{
@@ -15,6 +12,13 @@
 			"environment": [],
 			"console": "internalConsole",
 			"preLaunchTask": "cargo build"
+		},
+		{
+			"type": "node-terminal",
+			"name": "Run Script: start-ts",
+			"request": "launch",
+			"command": "yarn run start-ts 6",
+			"cwd": "${workspaceFolder}\\2024"
 		}
 	]
 }
