--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,10 @@
 	"[rust]": {
 		"editor.defaultFormatter": "rust-lang.rust-analyzer"
 	},
+	"[typescript]": {
+		"editor.defaultFormatter": "biomejs.biome",
+		"editor.formatOnSave": true
+	},
 	"editor.formatOnSave": true,
 	"editor.formatOnPaste": true,
 	"rust-analyzer.linkedProjects": ["2024\\Cargo.toml"]
