--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,7 +15,7 @@
 		},
 		{
 			"type": "node-terminal",
-			"name": "Run Script: start-ts",
+			"name": "TypeScript: Run",
 			"request": "launch",
 			"command": "yarn run start-ts 6",
 			"cwd": "${workspaceFolder}\\2024"
