--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,9 @@
 		"editor.defaultFormatter": "biomejs.biome",
 		"editor.formatOnSave": true
 	},
+	"jest.rootPath": "2024",
 	"editor.formatOnSave": true,
 	"editor.formatOnPaste": true,
-	"rust-analyzer.linkedProjects": ["2024\\Cargo.toml"]
+	"rust-analyzer.linkedProjects": ["2024\\Cargo.toml"],
+	"git.autofetch": true
 }
