--- a/2024/tsconfig.json
+++ b/2024/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"compilerOptions": {
 		"esModuleInterop": true,
+		"strict": true,
 		"types": ["jest", "node"],
 		"target": "ESNext",
 		"noUncheckedIndexedAccess": true,
